# imageExtractors

./: .env.example  .gitignore  Dockerfile  IMPROVEMENTS.md  README.md  client.py  docker-compose.yml  main.py  pypriject.toml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
examples/: README.md  django_integration.py  error_handling_examples.py  fastapi_advanced_patterns.py  fastapi_integration.py  fastapi_simple_integration.py  integration_examples.py  web_app_integration.py
extractors/: __init__.py  base.py  flickr.py
image_extractor/: __init__.py  client.py  config.py  exceptions.py
image_extractor/extractors/: flickr.py
image_extractor/utils/: __init__.py  http_client.py  validation.py
tests/: conftest.py  test_base_extractor.py  test_client.py  test_config.py  test_exceptions.py  test_extractors.py  test_http_client.py  test_main.py  test_registry.py  test_setup.py  test_validation.py
